Ensure shader lab canvas has visible height

--- a/src/oriel.css
+++ b/src/oriel.css
@@ -5565,6 +5565,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  min-height: 280px;
   background: #05070f;
 }
 
